--- a/11-reduce/index.html
+++ b/11-reduce/index.html
@@ -11,5 +11,6 @@
 
     <!--JavaScript-->
     <script src="./js/main.js"></script>
+    <script src="./js/ejercicios.js"></script>
   </body>
 </html>
