--- a/13-intro-DOM/index.html
+++ b/13-intro-DOM/index.html
@@ -9,5 +9,6 @@
   <body>
     <!--JavaScript-->
     <script src="./js/main.js"></script>
+    <script src="./js/table.js"></script>
   </body>
 </html>
