--- a/MyLearning/OOP/index.html
+++ b/MyLearning/OOP/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <!--JavaScript-->
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/Async & Await.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/oop.js"></script>
   </body>
 </html>
